fixes and simplification

--- a/settings.ini
+++ b/settings.ini
@@ -1,4 +1,5 @@
 [Settings]
+fourPlayer = False
 winWidth = 1200
 winHeight = 600
 backgroundColor = lightblue
@@ -14,15 +15,23 @@ netHeight = 100
 netWidth = 20
 netColor = black
 insultsEnabled = False
-fourPlayer = False
 playerSpeed = 5
 playerAccel = 5
 playerJump = 5
 playerRadius = 56
 ballRadius = 24
 ballColor = darkgreen
+p1Name = Blue
+p2Name = Red
+p3Name = Pink
+p4Name = Yellow
+p1Color = darkblue
+p2Color = darkred
+p3Color = purple
+p4Color = orange
 
 [Defaults]
+fourPlayer = False
 winWidth = 1200
 winHeight = 600
 backgroundColor = lightblue
@@ -38,10 +47,17 @@ netHeight = 100
 netWidth = 20
 netColor = black
 insultsEnabled = False
-fourPlayer = False
 playerSpeed = 5
 playerAccel = 5
 playerJump = 5
 playerRadius = 56
 ballRadius = 24
 ballColor = darkgreen
+p1Name = Blue
+p2Name = Red
+p3Name = Pink
+p4Name = Yellow
+p1Color = darkblue
+p2Color = darkred
+p3Color = purple
+p4Color = orange
