added score limit, other updates

--- a/settings.ini
+++ b/settings.ini
@@ -1,5 +1,6 @@
 [Settings]
-fourPlayer = False
+fourPlayer = True
+scoreLimit = 15
 winWidth = 1200
 winHeight = 600
 backgroundColor = lightblue
@@ -32,6 +33,7 @@ p4Color = orange
 
 [Defaults]
 fourPlayer = False
+scoreLimit = 21
 winWidth = 1200
 winHeight = 600
 backgroundColor = lightblue
