--- a/settings.ini
+++ b/settings.ini
@@ -1,13 +1,17 @@
 [Settings]
 fourPlayer = False
 scoreLimit = 15
+p1IsAI = False
+p2IsAI = True
+p3IsAI = False
+p4IsAI = False
 winWidth = 1200
 winHeight = 600
 backgroundColor = lightblue
 backgroundImage
 framerate = 144
 gravity = 0.1
-bounceCoefficient = 0.98
+bounceCoefficient = 1.0
 bounceCoefficientPlayer = 0.98
 bounceCoefficientNet = 0.75
 playerToBallMomentumTransfer = 0.12
@@ -34,13 +38,17 @@ p4Color = orange
 [Defaults]
 fourPlayer = False
 scoreLimit = 15
+p1IsAI = False
+p2IsAI = True
+p3IsAI = False
+p4IsAI = False
 winWidth = 1200
 winHeight = 600
 backgroundColor = lightblue
 backgroundImage
 framerate = 144
 gravity = 0.1
-bounceCoefficient = 0.98
+bounceCoefficient = 1.0
 bounceCoefficientPlayer = 0.98
 bounceCoefficientNet = 0.75
 playerToBallMomentumTransfer = 0.12
